--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     const map = new mapboxgl.Map({
       container: 'map', // ID of the div
       style: 'mapbox://styles/mapbox/streets-v12', // Map style
-      center: [-74.0060, 40.7128], // Center on NYC (example)
+      center: [-74.0060, 40.7128], // Center on NYC
       zoom: 12 // Zoom level
     });
 
-    // Add test markers (replace with your locations later)
+    // Add test markers
     const markers = [
       { name: "Joe’s Pizza", location: "123 Main St, New York, NY" },
       { name: "Sally’s Burgers", location: "456 Elm St, New York, NY" }
