--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     });
 
     // Airtable configuration
-    const AIRTABLE_API_KEY = 'patC4T8nrsZMyFMQw.6576eb1e44b2c8d9ca94a4d7ef9bc4ade84149f35433e4cbf6b2ec36c050137a';
+    const AIRTABLE_API_KEY = 'patBUv9Dje1C0Kmp8.2e6ac34fbe61e5b4e24a781ab8d2c0b868fd683d1be77f38ad98d3ba4faf9a4f';
     const BASE_ID = 'appsyaPTDflsszpmB';
     const TABLE_NAME = 'Maps';
 
@@ -33,6 +33,7 @@
       headers: { 'Authorization': `Bearer ${AIRTABLE_API_KEY}` }
     })
     .then(response => {
+      console.log('Airtable response:', response.data); // Log the full response for debugging
       const record = response.data.records[0]; // Get the first (and only) record for map-001
       if (record) {
         const locations = record.fields.Locations.split(' | '); // Split locations by " | "
@@ -62,7 +63,7 @@
       }
     })
     .catch(error => {
-      console.error('Error fetching Airtable data:', error);
+      console.error('Error fetching Airtable data:', error.response ? error.response.data : error); // More detailed error logging
     });
   </script>
 </body>
