--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <div id="map"></div>
   <script>
     fetch('/.netlify/functions/fetchAirtable')
-      .then(response => response.json())
+      .then(response => {
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        return response.json();
+      })
       .then(data => {
         console.log("Response Data:", data);
         if (!data.mapboxKey) throw new Error('Mapbox API key missing');
