--- a/index.html
+++ b/index.html
@@ -8,20 +8,59 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 0; }
-        #map { width: 100%; height: 500px; margin: 20px auto; }
-        .container { width: 90%; max-width: 800px; margin: auto; }
-        .link { display: block; margin: 15px 0; font-size: 16px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 0; 
+            padding: 0; 
+            background: linear-gradient(to right, #ff416c, #ff4b2b); 
+            color: white; 
+        }
+        h1 a {
+            color: white;
+            text-decoration: none;
+        }
+        h1 a:hover {
+            text-decoration: underline;
+        }
+        #map { 
+            width: 90%; 
+            height: 450px; 
+            margin: 20px auto; 
+            border-radius: 15px; 
+            box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
+        }
+        .container { 
+            width: 90%; 
+            max-width: 800px; 
+            margin: auto; 
+            padding: 40px; 
+        }
+        .link { 
+            display: inline-block; 
+            margin: 15px 10px; 
+            padding: 12px 24px; 
+            font-size: 16px; 
+            border-radius: 8px; 
+            background: white; 
+            color: #ff4b2b; 
+            text-decoration: none; 
+            font-weight: bold;
+            transition: 0.3s;
+        }
+        .link:hover { 
+            background: #ffe0e6; 
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 id="map-title">Food Map for </h1>
+        <h1 id="map-title">Food Map for <span id="video-name">...</span></h1>
         <div id="map"></div>
         <a id="video-link" class="link" href="#" target="_blank">Watch Original TikTok Video</a>
-        <h3>Want More Food Maps?</h3>
+        <h3>Signup to add it to your map</h3>
         <iframe class="airtable-embed" src="https://airtable.com/embed/appcRsxMxG1TVsKrz/pagYjsJcfs434HcA6/form" 
-            frameborder="0" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+            frameborder="0" width="100%" height="533" style="background: transparent; border: 1px solid #ccc; border-radius: 10px;"></iframe>
     </div>
 
     <script>
@@ -36,13 +75,16 @@
                 }
 
                 document.getElementById("video-link").href = data.videoLink;
-                document.getElementById("map-title").innerText += mapID;
+
+                // Extract video title (fallback to mapID)
+                const videoTitle = await fetchVideoTitle(data.videoLink);
+                document.getElementById("video-name").innerHTML = `<a href="${data.videoLink}" target="_blank">${videoTitle}</a>`;
 
                 mapboxgl.accessToken = data.mapboxKey;
                 const map = new mapboxgl.Map({
                     container: 'map',
                     style: 'mapbox://styles/mapbox/streets-v12',
-                    center: data.locations[0]?.coords || [-74.0060, 40.7128], // Default: NYC
+                    center: data.locations[0]?.coords || [-74.0060, 40.7128], // Default to NYC
                     zoom: 12
                 });
 
@@ -60,7 +102,18 @@
             }
         }
 
-        // Run function to get map ID from URL
+        async function fetchVideoTitle(url) {
+            try {
+                const response = await fetch(`https://noembed.com/embed?url=${url}`);
+                const data = await response.json();
+                return data.title || "Unknown TikTok Video";
+            } catch (error) {
+                console.error("Error fetching video title:", error);
+                return "Unknown TikTok Video";
+            }
+        }
+
+        // Get map ID from URL and fetch data
         const urlParams = new URLSearchParams(window.location.search);
         fetchMapData(urlParams.get("mapID"));
     </script>
