--- a/index.html
+++ b/index.html
@@ -5,106 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Map</title>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            margin: 0; 
-            padding: 0; 
-            background: linear-gradient(to right, #ff416c, #ff4b2b); 
-            color: white; 
-        }
-        h1 a {
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: linear-gradient(135deg, #D4145A, #FBB03B);
             color: white;
-            text-decoration: none;
         }
-        h1 a:hover {
-            text-decoration: underline;
-        }
-        #map { 
-            width: 90%; 
-            height: 450px; 
-            margin: 20px auto; 
-            border-radius: 15px; 
-            box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
-        }
-        .container { 
-            width: 90%; 
-            max-width: 800px; 
-            margin: auto; 
-            padding: 40px; 
-        }
-        .link { 
-            display: inline-block; 
-            margin: 15px 10px; 
-            padding: 12px 24px; 
-            font-size: 16px; 
-            border-radius: 8px; 
-            background: white; 
-            color: #ff4b2b; 
-            text-decoration: none; 
+        .header {
+            padding: 20px;
+            font-size: 24px;
             font-weight: bold;
-            transition: 0.3s;
         }
-        .link:hover { 
-            background: #ffe0e6; 
+        .map-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        #map {
+            width: 90%;
+            height: 400px;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            color: black;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        .cta-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 15px;
+        }
+        .cta-button {
+            padding: 10px 20px;
+            border-radius: 5px;
+            background: #D4145A;
+            color: white;
+            font-size: 16px;
+            text-decoration: none;
+            font-weight: bold;
+            box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+        }
+        a {
+            color: #D4145A;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1 id="map-title">Food Map for <span id="video-name">...</span></h1>
+    <div class="header" id="page-title">Food Map</div>
+    <div class="map-container">
         <div id="map"></div>
-        <a id="video-link" class="link" href="#" target="_blank">Watch Original TikTok Video</a>
-        <h3>Want More Food Maps?</h3>
-        <iframe class="airtable-embed" src="https://airtable.com/embed/appcRsxMxG1TVsKrz/pagYjsJcfs434HcA6/form" 
-            frameborder="0" width="100%" height="533" style="background: transparent; border: 1px solid #ccc; border-radius: 10px;"></iframe>
+    </div>
+    <div class="container">
+        <p><a id="video-link" href="#" target="_blank">Watch Original TikTok Video</a></p>
+        <div class="cta-buttons">
+            <a href="#" class="cta-button">Download Now</a>
+            <a href="#" class="cta-button" style="background: #333;">Learn More</a>
+        </div>
     </div>
 
     <script>
-        async function fetchMapData(mapID) {
-            try {
-                const response = await fetch(`/.netlify/functions/fetchAirtable?mapID=${mapID}`);
-                const data = await response.json();
+        const urlParams = new URLSearchParams(window.location.search);
+        const mapID = urlParams.get('mapID');
 
-                if (!data.airtableData || !data.locations.length) {
-                    document.body.innerHTML = "<h1>Map Not Found</h1>";
+        fetch(`/.netlify/functions/fetchAirtable?mapID=${mapID}`)
+            .then(response => response.json())
+            .then(data => {
+                if (!data.airtableData) {
+                    document.getElementById('page-title').textContent = "Food Map Not Found";
                     return;
                 }
-
-                document.getElementById("video-link").href = data.videoLink;
-
-                // Use Airtable "Video Title" field if available
-                const videoTitle = data.videoTitle || mapID;
-                document.getElementById("video-name").innerHTML = `<a href="${data.videoLink}" target="_blank">${videoTitle}</a>`;
-
+                document.getElementById('page-title').textContent = data.videoTitle || "Food Map";
+                document.getElementById('video-link').href = data.videoLink;
+                
                 mapboxgl.accessToken = data.mapboxKey;
                 const map = new mapboxgl.Map({
                     container: 'map',
                     style: 'mapbox://styles/mapbox/streets-v12',
-                    center: data.locations[0]?.coords || [-74.0060, 40.7128], // Default to NYC
+                    center: [-74.0060, 40.7128],
                     zoom: 12
                 });
 
-                for (const place of data.locations) {
+                data.locations.forEach(location => {
                     new mapboxgl.Marker()
-                        .setLngLat(place.coords)
-                        .setPopup(new mapboxgl.Popup().setHTML(
-                            `<h3>${place.name}</h3><p><a href="${place.url}" target="_blank">View on Google Maps</a></p>`
-                        ))
+                        .setLngLat([location.lng, location.lat])
+                        .setPopup(new mapboxgl.Popup().setHTML(`<h3>${location.name}</h3>`))
                         .addTo(map);
-                }
-            } catch (error) {
-                console.error("Error fetching map data:", error);
-                document.body.innerHTML = "<h1>Failed to Load Map Data</h1>";
-            }
-        }
-
-        // Get map ID from URL and fetch data
-        const urlParams = new URLSearchParams(window.location.search);
-        fetchMapData(urlParams.get("mapID"));
+                });
+            })
+            .catch(error => console.error('Error fetching map data:', error));
     </script>
 </body>
 </html>
