--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             try {
                 const response = await fetch(`https://noembed.com/embed?url=${url}`);
                 const data = await response.json();
-                return data.title || "Unknown TikTok Video";
+                return data.title || "TikTok Video";
             } catch (error) {
                 console.error("Error fetching video title:", error);
                 return "Unknown TikTok Video";
